# postgis-geohash

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  nosetests.py.in
ext/: Makefile.am
extension/: .gitignore  Makefile.in  geohash.c  geohash.sql  postgis_geohash.control.in  version.script
extension/expected/: geohash_test.out
extension/sql/: geohash_test.sql
m4/: Makefile.am
tests/: Makefile.am  all.sh  install-check.sh.in  test_geohash.py
